@@ -54,7 +54,7 @@ if __name__ == '__main__':
     thread_count = API.thread_count()
     assert thread_count >= 1
     
-    threads = [Task(API(i)) for i in range(thread_count)]
+    threads = [Task(API(i), 'python_c') for i in range(thread_count)]
     for t in threads:
         t.start()
     for t in threads:
